# demo

./: .gitignore
DesPat/Factory/: Factory.cpp
DesPat/SingPat/: ResourceConuter.cpp  hungry.cpp  lazy.cpp
DesPat/cmake_learn/: CMakeLists.txt  hello.cpp
DesPat/cmake_learn/cmake_model/: CMakeLists.txt
DesPat/key_word/: const.cpp  explicit.cpp
DesPat/poly/: PolyMorphism.cpp
DesPat/tools_/: vector.cpp  vector_mod.cpp
Flask_learn/: README.md  backend_demo.py  create_database.sql  flask_demo105.py  requirements.txt
NodeJs/: README.md  index.js
Qt_demo/database_basic/: Qt_MySQL_Driver_Setup_Guide.md  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_demo/info_flow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_demo/page_change/: mainwindow.cpp  mainwindow.h
Vue_learn/Vue_see/Vue_104/: README.md
Vue_learn/Vue_see/Vue_104/src/: App.vue  main.js
Vue_learn/Vue_see/Vue_104/src/components/: arco_test.vue  components1.vue  test_button.vue  v_model_test.vue
Vue_learn/basic_demo/: basic.html  basic.js
arco_qt/frontend/src/: App.vue  main.js  style.css
arco_qt/frontend/src/components/: Login.vue
